# lineup

./: CHANGELOG.md  DEVELOPER.md  LICENSE  README.md  biome.json  create-icons.py  index.html  package.json  pnpm-lock.yaml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  index.css  index.tsx  types.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  db.rs  lib.rs  main.rs  parser.rs
src-tauri/src/parsers/: go_parser.rs  mod.rs  ts_parser.rs
src/components/: AlertDialog.tsx  FileTree.tsx  HistoryCard.tsx  ProgressModal.tsx  ScanOptionsModal.tsx  StructCard.tsx  StructDetail.tsx
src/pages/: Home.tsx  ScanResults.tsx  Settings.tsx
src/shared/: Footer.tsx  Layout.tsx
src/store/: settings.ts
