[package]
name = "Lineup"
version = "1.1.0"
description = "Lineup is a desktop app that scans Go repositories and finds struct types that waste memory due to field padding"
authors = ["Jaylen Douglas"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lineup_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
ignore = "0.4.25"
regex = "1.12.3"
once_cell = "1.21.4"
tauri-plugin-dialog = "2.7.0"
oxc_allocator = "0.128.0"
oxc_parser = "0.128.0"
oxc_ast = "0.128.0"
oxc_span = "0.128.0"

